--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-my link bio
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Jean Darcy Ruzindana</title>
+    <meta charset="utf-8">
+    <meta name="autor" content="Jean Darcy Ruzindana">
+    <body>
+      
+    </body>
+  </head>
+</html>
+
+
+
+ 
