--- a/index.html
+++ b/index.html
@@ -1,96 +1,119 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Jean Darcy Ruzindana</title>
-    <meta charset="utf-8">
-    <meta name="author" content="Jean Darcy Ruzindana">
-    <style>
-      body {
-        padding-top: 40px;
-        padding-bottom: 40px;
-        background-color: #004643;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-      }
-      .banner-image {
-        width: 128px;
-        height: 128px;
-        object-fit: cover;
-        border-radius: 48px;
-      }
-      .thumbnail {
-        width: 48px;
-        height: 48px;
-        border-radius: 48px;
-        object-fit: cover;
-      }
-      .name {
-        color: #fffffe;
-        text-align: center;
-        margin-top: 20px;
-      }
-      .social-icons {
-        color: #fffffe;
-        text-decoration: none;
-        display: flex;
-        justify-content: center;
-        gap: 20px;
-        margin-top: 20px;
-      }
-      .link {
-        background-color: #f9bc60;
-        display: flex;
-        align-items: center;
-        padding: 5px;
-        margin-top: 20px;
-      }
-      .link a {
-        color: #001e1d;
-        text-decoration: none;
-        text-align: center;
-        flex-grow: 1;
-      }
-      .items {
-        display: flex;
-        flex-direction: column;
-        gap: 30px;
-        max-width: 640px;
-        flex-grow: 1;
-      }
-      .banner {
-        display: flex;
-        justify-content: center;
-      }
-    </style>
-  </head>
-  <body>
-    <div class="banner">
-      <img src="/thumnails/nik-SzNZoosEBA-unplash.jpg" alt="Jean Darcy Ruzindana headshot" class="banner-image">
-    </div>
-    <div class="name">
-      Jean Darcy Ruzindana
-    </div>
-    <div class="social-icons">
-      <a href="https://github.com/darcyruzi07" target="_blank">GitHub</a>
-      <a href="https://www.linkedin.com/in/darcy-ruzindana-204711281/" target="_blank">LinkedIn</a>
-      <a href="https://www.tiktok.com/@darcyruzi?lang=en" target="_blank">TikTok</a>
-      <a href="https://x.com/darcyruzi" target="_blank">X</a>
-    </div>
-    <div class="link">
-      <img src="/thumbnails/sam-quek-EZe8GIL5Ts-unsplash.jpg">
-      <a target="_blank" href="https://visitrwanda.com/">Visit Rwanda — JD</a>
-    </div>
-    <div class="link">
-      <img src="/thumbnails/allec-gomes-HZZLct2jB1E-unsplash.jpg">
-      <a target="_blank" href="https://www.moshions.rw/">Buy With Moshions — JD</a>
-    </div>
-    <div class="link">
-      <img src="duong-ngan-fy7VagQ_oJg-unsplash.jpg">
-      <a target="_blank" href="https://inyarwanda.com/">The Best Magazine — Inyarwanda</a>
-    </div>
-  </body>
+<head>
+  <title>Jean Darcy Ruzindana</title>
+  <meta charset="utf-8">
+  <meta name="author" content="Jean Darcy Ruzindana">
+  <style>
+    body {
+      padding: 40px;
+      background-color: #004643;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      font-family: Arial, sans-serif;
+      color: #fffffe;
+    }
+
+    .banner-image {
+      width: 128px;
+      height: 128px;
+      object-fit: cover;
+      border-radius: 50%;
+      margin-bottom: 20px;
+    }
+
+    .name {
+      font-size: 24px;
+      font-weight: bold;
+      margin-bottom: 20px;
+    }
+
+    .social-icons {
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+      margin-bottom: 20px;
+    }
+
+    .social-icons a {
+      color: #fffffe;
+      text-decoration: none;
+      transition: color 0.3s ease;
+    }
+
+    .social-icons a:hover {
+      color: #f9bc60;
+    }
+
+    .link {
+      display: flex;
+      align-items: center;
+      background-color: #f9bc60;
+      padding: 10px;
+      margin-bottom: 20px;
+      width: 300px;
+      border-radius: 8px;
+    }
+
+    .link img {
+      width: 48px;
+      height: 48px;
+      border-radius: 50%;
+      margin-right: 10px;
+    }
+
+    .link a {
+      color: #001e1d;
+      text-decoration: none;
+      flex-grow: 1;
+      text-align: center;
+    }
+  </style>
+</head>
+<body>
+  <div class="banner">
+    <img src="/thumbnails/nik-SzNZoosESBA-unsplash.jpg" alt="Jean Darcy Ruzindana headshot" class="banner-image">
+  </div>
+
+  <div class="name">
+    Jean Darcy Ruzindana
+  </div>
+
+  <div class="social-icons">
+    <a href="https://github.com/darcyruzi07" target="_blank">
+      GitHub
+    </a>
+
+    <a href="https://www.linkedin.com/in/darcy-ruzindana-204711281/" target="_blank">
+      LinkedIn
+    </a>
+
+    <a href="https://www.tiktok.com/@darcyruzi?lang=en" target="_blank">
+      TikTok
+    </a>
+
+    <a href="https://x.com/darcyruzi" target="_blank">
+      X
+    </a>
+  </div>
+
+  <div class="link">
+    <img src="/thumbnails/sam-quek-EZeA8GlL5Ts-unsplash.jpg" alt="Sam Quek">
+    <a target="_blank" href="https://visitrwanda.com/">Visit Rwanda — JD</a>
+  </div>
+
+  <div class="link">
+    <img src="/thumbnails/annie-spratt-9QJlJl0QCnQ-unsplash.jpg" alt="Annie Spratt">
+    <a target="_blank" href="https://www.moshions.rw/">Buy With Moshions — JD</a>
+  </div>
+
+  <div class="link">
+    <img src="/thumbnails/duong-ngan-fy7VagQ_oJg-unsplash.jpg" alt="Duong Ngan">
+    <a target="_blank" href="https://inyarwanda.com/">The Best Magazine — Inyarwanda</a>
+  </div>
+</body>
 </html>
 
 
