--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 </head>
 <body>
   <div class="banner">
-    <img src="/thumbnails/image_123650291 (1).jpg" alt="Jean Darcy Ruzindana headshot" class="banner-image">
+    <img src="/thumbnails/image_123650291 (1).JPG" alt="Jean Darcy Ruzindana headshot" class="banner-image">
   </div>
 
   <div class="name">
